--- a/src/frontend/styles.scss
+++ b/src/frontend/styles.scss
@@ -6,6 +6,7 @@
 @import './sass/components/mat-card';
 @import './sass/components/mat-tabs';
 @import './sass/components/mat-table';
+@import './sass/components/mat-desktop';
 body {
   margin: 0;
   font-family: Lato, sans-serif; // font-size: 13px;
