--- a/src/frontend/app/features/applications/deploy-application/deploy-application.component.html
+++ b/src/frontend/app/features/applications/deploy-application/deploy-application.component.html
@@ -1,8 +1,9 @@
 <app-page-header>
-  Deploy
+  <span *ngIf="!isRedeploy">Deploy</span>
+  <span *ngIf="isRedeploy">Redeploy Application</span>
 </app-page-header>
 <app-steppers cancel="/applications">
-  <app-step [title]="'Cloud Foundry'" [valid]="step1.validate | async" [onNext]="onNext">
+  <app-step *ngIf="!isRedeploy" [title]="'Cloud Foundry'" [valid]="step1.validate | async" [onNext]="onNext">
    <app-create-application-step1 #step1></app-create-application-step1>
   </app-step>
   <app-step [title]="'Source'" [valid]="step2.validate | async" [onNext]="step2.onNext" nextButtonText="Deploy">
