--- a/src/frontend/app/features/applications/application/application-tabs-base/tabs/github-tab/github-tab.component.scss
+++ b/src/frontend/app/features/applications/application/application-tabs-base/tabs/github-tab/github-tab.component.scss
@@ -16,8 +16,9 @@
   .github-tab__avatar {
     img {
       float: right;
-      height: 100px;
-      width: 100px;
+      height: 64px;
+      width: 64px;
+      border-radius: 50%;
     }
   }
 }
