--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users.component.html
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users.component.html
@@ -6,7 +6,8 @@
   <!-- <app-step title="Select">
   </app-step> -->
   <app-step title="Modify">
-    <app-manage-users-modify [users]="users$ | async" [roles]="roles"></app-manage-users-modify>
+    <!-- [roles]="roles" -->
+    <app-manage-users-modify [users]="users$ | async"></app-manage-users-modify>
   </app-step>
   <app-step title="Confirm">
   </app-step>
