--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.html
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.html
@@ -18,10 +18,12 @@
   </ng-template>
 </div>
 <div class="modify-users__org-roles">
-  <mat-checkbox [(ngModel)]="orgRoles.permissions.orgManager" (change)="updateOrgUser()">Org Manager</mat-checkbox>
-  <mat-checkbox [(ngModel)]="orgRoles.permissions.auditor" (change)="updateOrgUser()">Org Auditor</mat-checkbox>
-  <mat-checkbox [(ngModel)]="orgRoles.permissions.billingManager" (change)="updateOrgUser()">Org Billing Manager</mat-checkbox>
-  <mat-checkbox [(ngModel)]="orgRoles.permissions.user" [disabled]="orgRoles.permissions.orgManager || orgRoles.permissions.billingManager || orgRoles.permissions.auditor">Org User</mat-checkbox>
+  <app-cf-role-checkbox [users]="users" [orgGuid]="selectedOrgGuid" [role]="'orgManager'"></app-cf-role-checkbox>
+
+  <!-- <mat-checkbox [(ngModel)]="orgRoles.permissions.orgManager" (change)="updateOrgUser()">Org Manager</mat-checkbox> -->
+  <!-- <mat-checkbox [(ngModel)]="orgRoles.permissions.auditor" (change)="updateOrgUser()">Org Auditor</mat-checkbox> -->
+  <!-- <mat-checkbox [(ngModel)]="orgRoles.permissions.billingManager" (change)="updateOrgUser()">Org Billing Manager</mat-checkbox> -->
+  <!-- <mat-checkbox [(ngModel)]="orgRoles.permissions.user" [disabled]="orgRoles.permissions.orgManager || orgRoles.permissions.billingManager || orgRoles.permissions.auditor">Org User</mat-checkbox> -->
 </div>
 <div class="modify-users__spaces-roles">
   <!-- <app-space-roles-list-wrapper [orgGuid]="selectedOrgGuid" [roles]="roles"></app-space-roles-list-wrapper> -->
