--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.scss
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.scss
@@ -8,7 +8,7 @@
   // &__selected-users,
   &__org-roles {
     padding-bottom: 20px;
-    mat-checkbox {
+    app-cf-role-checkbox {
       padding-right: 15px;
     }
   }
