--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-select/manage-users-select.component.html
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-select/manage-users-select.component.html
@@ -1,11 +1,13 @@
-<div>
+<div class="manager-users-select__selected-users">
   Selected Users:
   <div *ngIf="(selectedUsers$ | async).length > 0; else noUsers">
     <span *ngFor="let user of (selectedUsers$ | async); let index = index">
-      {{user.username}}<span *ngIf="index !== (selectedUsers$ | async).length - 1">, </span>
+      {{user.entity.username}}<span *ngIf="index !== (selectedUsers$ | async).length - 1">, </span>
     </span>
   </div>
-  <ng-template #noUsers>-</ng-template>
+  <ng-template #noUsers>
+    <div>-</div>
+  </ng-template>
 </div>
 
 
