--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users.component.html
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users.component.html
@@ -3,13 +3,12 @@
   <ng-template #multiUser>Manager Users Roles</ng-template>
 </app-page-header>
 <app-steppers cancel="{{defaultCancelUrl}}">
-  <app-step *ngIf="(initialUsers$ | async).length === 0" title="Select" [blocked$]="loading$">
-    <app-manage-users-select></app-manage-users-select>
+  <app-step *ngIf="(initialUsers$ | async).length === 0" title="Select" [blocked$]="loading$" [onNext]="select.onNext" [valid]="select.valid$ | async">
+    <app-manage-users-select #select></app-manage-users-select>
   </app-step>
   <app-step title="Modify">
     <!-- [roles]=" roles " -->
-    TODO: select straight from store
-    <!-- <app-manage-users-modify [users]="users$ | async"></app-manage-users-modify> -->
+    <app-manage-users-modify></app-manage-users-modify>
   </app-step>
   <app-step title="Confirm ">
   </app-step>
