--- a/src/frontend/app/shared/components/list/list-types/cf-users-space-roles/table-cell-space-role/table-cell-space-role.component.html
+++ b/src/frontend/app/shared/components/list/list-types/cf-users-space-roles/table-cell-space-role/table-cell-space-role.component.html
@@ -1,1 +1,1 @@
-<app-cf-role-checkbox [users]="config.users" [orgGuid]="row.entity.organization_guid" [spaceGuid]="row.metadata.guid" [role]="config.role" (change)="updateOrgUser()"></app-cf-role-checkbox>
+<app-cf-role-checkbox [orgGuid]="row.entity.organization_guid" [spaceGuid]="row.metadata.guid" [role]="config.role" (change)="updateOrgUser()"></app-cf-role-checkbox>
