--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.html
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.html
@@ -1,8 +1,6 @@
 <div class="modify-users__selected-users">
   Selected Users:
-  <span *ngFor="let user of users; let index = index">
-    {{user.username}}<span *ngIf="index !== users.length - 1; else lastUser">, </span>
-  </span>
+  <app-enumerate [collection]="users$" [labelPath]="'username'"></app-enumerate>
 </div>
 <div class="modify-users__orgs stepper-form">
   <div *ngIf="singleOrg$ | async as singleOrg; then singleOrg else manyOrgs"></div>
@@ -18,10 +16,10 @@
   </ng-template>
 </div>
 <div class="modify-users__org-roles">
-  <app-cf-role-checkbox [users]="users" [orgGuid]="selectedOrgGuid" [role]="'orgManager'" (change)="updateOrgUser()"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [users]="users" [orgGuid]="selectedOrgGuid" [role]="'auditor'" (change)="updateOrgUser()"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [users]="users" [orgGuid]="selectedOrgGuid" [role]="'billingManager'" (change)="updateOrgUser()"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [users]="users" [orgGuid]="selectedOrgGuid" [role]="'user'" (change)="updateOrgUser()"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'orgManager'" (change)="updateOrgUser()"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'auditor'" (change)="updateOrgUser()"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'billingManager'" (change)="updateOrgUser()"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'user'" (change)="updateOrgUser()"></app-cf-role-checkbox>
 </div>
 <div class="modify-users__spaces-roles">
   <div #spaceRolesTable></div>
