--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.scss
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.scss
@@ -12,4 +12,10 @@
       padding-right: 15px;
     }
   }
+  &__selected-users {
+    display: flex; // padding-bottom: 20px;
+    app-enumerate {
+      padding-left: 5px;
+    }
+  }
 }
