--- a/src/frontend/app/shared/components/cf-role-checkbox/cf-role-checkbox.component.html
+++ b/src/frontend/app/shared/components/cf-role-checkbox/cf-role-checkbox.component.html
@@ -1,2 +1,2 @@
 <!-- !!{{checked}}!!<br>{{checked === null}}<br>a -->
-<mat-checkbox [(ngModel)]="checked" (change)="roleUpdated($event.value)" [indeterminate]="checked === null" [matTooltip]="tooltip" [matTooltipPosition]="'below'">{{getLabel()}}</mat-checkbox>
+<mat-checkbox [(ngModel)]="checked" (change)="roleUpdated($event.checked)" [indeterminate]="checked === null" [matTooltip]="tooltip" [matTooltipPosition]="'below'">{{getLabel()}}</mat-checkbox>
