--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.html
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.html
@@ -15,11 +15,11 @@
     </mat-form-field>
   </ng-template>
 </div>
-<div class="modify-users__org-roles">
-  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'orgManager'" (changed)="updateOrgUser($event, 0)"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'auditor'" (changed)="updateOrgUser($event, 1)"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'billingManager'" (changed)="updateOrgUser($event, 2)"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'user'" [disabled]="disableOrgUser.disable"></app-cf-role-checkbox>
+<div class="modify-users__org-roles" *ngIf="selectedOrgGuid">
+  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'orgManager'"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'auditor'"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'billingManager'"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'user'"></app-cf-role-checkbox>
 </div>
 <div class="modify-users__spaces-roles">
   <div #spaceRolesTable></div>
