--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.html
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.html
@@ -16,10 +16,10 @@
   </ng-template>
 </div>
 <div class="modify-users__org-roles" *ngIf="selectedOrgGuid">
-  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'orgManager'"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'auditor'"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'billingManager'"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [orgGuid]="selectedOrgGuid" [role]="'user'"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [role]="'orgManager'"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [role]="'auditor'"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [role]="'billingManager'"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [role]="'user'"></app-cf-role-checkbox>
 </div>
 <div class="modify-users__spaces-roles">
   <div #spaceRolesTable></div>
