--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.html
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-modify/manage-users-modify.component.html
@@ -20,10 +20,10 @@
   </ng-template>
 </div>
 <div class="modify-users__org-roles" *ngIf="selectedOrgGuid">
-  <app-cf-role-checkbox [role]="'orgManager'"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [role]="'auditor'"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [role]="'billingManager'"></app-cf-role-checkbox>
-  <app-cf-role-checkbox [role]="'user'"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [role]="orgRoles.MANAGER"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [role]="orgRoles.AUDITOR"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [role]="orgRoles.BILLING_MANAGERS"></app-cf-role-checkbox>
+  <app-cf-role-checkbox [role]="orgRoles.USER"></app-cf-role-checkbox>
 </div>
 <div class="modify-users__spaces-roles">
   <div #spaceRolesTable></div>
