--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users.component.html
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users.component.html
@@ -10,6 +10,7 @@
     <app-manage-users-modify #modify></app-manage-users-modify>
   </app-step>
   <app-step title="Confirm ">
+    <app-manage-users-confirm #confirm></app-manage-users-confirm>
   </app-step>
   <app-step title="Progress ">
   </app-step>
