--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-confirm/manage-users-confirm.component.html
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users-confirm/manage-users-confirm.component.html
@@ -1,3 +1,3 @@
 <p>Please confirm that you would like to make the following user role changes to organization ??????</p>
-<app-action-monitor [columns]="columns" [data$]="changes$" [entityKey]="userSchemaKey" [monitorState]="TODO" [getId]="getId">
+<app-action-monitor [columns]="columns" [data$]="changes$" [entityKey]="userSchemaKey" [monitorState]="monitorState" [getId]="getId">
 </app-action-monitor>
