--- a/src/frontend/app/shared/components/list/list-table/table-cell-request-monitor-icon/table-cell-request-monitor-icon.component.html
+++ b/src/frontend/app/shared/components/list/list-table/table-cell-request-monitor-icon/table-cell-request-monitor-icon.component.html
@@ -1,1 +1,1 @@
-<app-action-monitor-icon [id]="id" [entityKey]="config.entityKey" [schema]="config.schema" [monitorState]="config.monitorState" [getUpdateKey]="getUpdateKey"></app-action-monitor-icon>
+<app-action-monitor-icon *ngIf="configObj" [id]="id" [entityKey]="configObj.entityKey" [schema]="configObj.schema" [monitorState]="configObj.monitorState" [updateKey]="configObj.updateKey"></app-action-monitor-icon>
