--- a/src/frontend/app/features/cloud-foundry/tabs/cloud-foundry-organizations/cloud-foundry-organization-spaces/cloud-foundry-space-base/cloud-foundry-space-base.component.html
+++ b/src/frontend/app/features/cloud-foundry/tabs/cloud-foundry-organizations/cloud-foundry-organization-spaces/cloud-foundry-space-base/cloud-foundry-space-base.component.html
@@ -7,7 +7,7 @@
     <button mat-icon-button name="delete" *ngIf="(cfEndpointService.connected$ | async)" (click)="deleteSpace()">
         <mat-icon>delete</mat-icon>
       </button>
-    <button mat-icon-button name="user-management" *ngIf="isDevEnvironment && (cfEndpointService.connected$ | async)" routerLink="/cloud-foundry/{{cfEndpointService.cfGuid}}/users/manage">
+    <button mat-icon-button name="user-management" *ngIf="cfEndpointService.connected$ | async" routerLink="/cloud-foundry/{{cfEndpointService.cfGuid}}/users/manage" matTooltip="Manage Users">
         <mat-icon>people</mat-icon>
       </button>
     <button mat-icon-button name="cli" routerLink="/cloud-foundry/{{cfEndpointService.cfGuid}}/organizations/{{cfOrgService.orgGuid}}/spaces/{{cfSpaceService.spaceGuid}}/cli" matTooltip="CLI Info">
