--- a/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users.component.html
+++ b/src/frontend/app/features/cloud-foundry/users/manage-users/manage-users.component.html
@@ -9,7 +9,7 @@
   <app-step title="Roles" [blocked$]="modify.cfRolesService.loading$" [onNext]="modify.onNext" [valid]="modify.valid$ | async">
     <app-manage-users-modify #modify></app-manage-users-modify>
   </app-step>
-  <app-step title="Confirm" [onEnter]="confirm.onEnter" cancelButtonText="Close" [disablePrevious]="confirm.updateStarted" [destructiveStep]="!confirm.updateStarted" [onNext]="confirm.startApply" finishButtonText="Apply">
+  <app-step title="Confirm" [onEnter]="confirm.onEnter" [cancelButtonText]="confirm.updateStarted ? 'Close' : 'Cancel'" [disablePrevious]="confirm.updateStarted" [destructiveStep]="!confirm.updateStarted" [onNext]="confirm.startApply" finishButtonText="Apply">
     <app-manage-users-confirm #confirm></app-manage-users-confirm>
   </app-step>
 </app-steppers>
